refactor(core): refactor codes